Quick: Save untracked change to Code@TACC camps

--- a/web-content-display/education/stem-programs/code-at-tacc/connected.html
+++ b/web-content-display/education/stem-programs/code-at-tacc/connected.html
@@ -124,15 +124,15 @@
 					</ul>
 					<!--<p>
 						<em>Compliance Forms:</em></p>
-					<ul class="camp-info">
+					<ul class="info-list">
 						<li>
 							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=88127a7a-05a8-4641-8fea-846a07f74309&amp;env=na1" target="_blank">English</a></p>
 						<li>
 							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=2a80961b-5625-46f5-b5e1-d6ebe70acadc&amp;env=na1" target="_blank">Español</a></li>
 					</ul>
 					<p>
-						<em>Release &amp; Indemnification Agreement:</em></p>
-					<ul class="camp-info">
+						<em>Release and Indemnification Form:</em></p>
+					<ul class="info-list">
 						<li>
 							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=88127a7a-05a8-4641-8fea-846a07f74309" target="_blank">2018 English Code@TACC Connected - YPP Camp Release Forms</a>
 						</li>
