--- a/web-content-display/education/stem-programs/code-at-tacc/cybersecurity.html
+++ b/web-content-display/education/stem-programs/code-at-tacc/cybersecurity.html
@@ -157,33 +157,58 @@
 				<div class="col-md-4 col-sm-12">
 					<h4 class="camp-subhead">
 						PROGRAM FORMS</h4>
-					<ul class="info-list">
+					<!--<ul class="info-list">
 						<li>
 							Required forms will be available soon.</li>
+					</ul>-->
+					<p>
+						<em>Code of Conduct:</em></p>
+					<ul class="info-list">
+						<li>
+							<a href="/documents/1084364/1736606/Code%40TACC+Code+of+Conduct.pdf" title="2021 Code@TACC Code of Conduct - ENGLISH" target="_blank">English</a></li>
+						<li>
+							<a href="/documents/1084364/1736606/Code%40TACC+Code+of+Conduct+-+SPANISH.pdf" title="2021 Code@TACC Code of Conduct - SPANISH" target="_blank">Español</a></li>
 					</ul>
 					<!--<p>
 						<em>Compliance Forms:</em></p>
-					<ul class="camp-info">
+					<ul class="info-list">
 						<li>
 							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=8441907e-13cf-42a7-a6bc-f37c1b99ec83&amp;env=na1" target="_blank">English</a></li>
 						<li>
 							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=ae067a87-eb26-42d4-be16-344a705d148f&amp;env=na1" target="_blank">Español</a></li>
 					</ul>
+					-->
 					<p>
-						<em>Release &amp; Indemnification Agreement:</em></p>
-					<ul class="camp-info">
+						<em>Release and Indemnification Form:</em></p>
+					<ul class="info-list">
 						<li>
-							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=8441907e-13cf-42a7-a6bc-f37c1b99ec83" target="_blank" title="2018 English Code@TACC Cybersecurity - YPP Camp Release">2018 English Code@TACC Cybersecurity - YPP Camp Release </a></li>
+							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=d587675e-b44e-4223-af5d-9ca523cf5168&env=na1&acct=d40a37d5-d708-44dd-9ea7-aab378b81326&v=2" target="_blank">English</a></li>
 						<li>
-							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=ae067a87-eb26-42d4-be16-344a705d148f" target="_blank" title="2018 Español Code@TACC Cybersecurity - YPP formularios de liberación">2018 Español Code@TACC Cybersecurity - YPP formularios de liberación</a></li>
-					</ul>-->
+							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=d438f709-6ea0-4a45-89bc-138daf40ad00&env=na1&acct=d40a37d5-d708-44dd-9ea7-aab378b81326&v=2" target="_blank">Español</a></li>
+					</ul>
+					<p>
+						<em>Media Release:</em></p>
+					<ul class="info-list">
+						<li>
+							<a href="/documents/1084364/1736606/Media+Release+Robotics+-+Adult.pdf" target="_blank">English</a></li>
+						<li>
+							<a href="/documents/1084364/1736606/Media+Release+Robotics+-+Adult+-+SPANISH.pdf" target="_blank">Español</a></li>
+					</ul>
 				</div>
 				<div class="col-md-4 col-sm-12">
 					<h4 class="camp-subhead">
 						CAMP PROGRAM</h4>
-					<ul class="info-list">
+					<!--<ul class="info-list">
 						<li>
 							Communication plan will be available soon.</li>
+					</ul>-->
+					<p>
+						<em>Y.P.P. Communication Plan:</em></p>
+					<ul class="info-list">
+						<li>
+							<a href="/documents/1084364/1736606/Comm+Plan+GenCyber.pdf" title="Code@TACC Robotics Communication Plan - ENGLISH" target="_blank">English</a></li>
+						<li>
+							<a href="/documents/1084364/1736606/Comm+Plan+GenCyber+-+SPANISH.pdf" title="Code@TACC Robotics Communication Plan - SPANISH" target="_blank">Español</a></li>
 					</ul>
 				</div>
 			</div>
