--- a/web-content-display/education/stem-programs/code-at-tacc/robotics.html
+++ b/web-content-display/education/stem-programs/code-at-tacc/robotics.html
@@ -176,7 +176,7 @@
 							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=7b4e849b-0139-4307-bdc8-b636a323b709&amp;env=na1" target="_blank">Español</a></li>
 					</ul>-->
 					<p>
-						<em>Release &amp; Indemnification Agreement:</em></p>
+						<em>Release and Indemnification Form:</em></p>
 					<ul class="info-list">
 						<li>
 							<a href="/documents/1084364/1736606/UT+Release+Agreement.pdf" target="_blank">English</a></li>
@@ -189,7 +189,7 @@
 						<li>
 							<a href="/documents/1084364/1736606/Media+Release Robotics+-+Adult.pdf" target="_blank">English</a></li>
 						<li>
-							<a href="Media+Release Robotics+-+Adult+-+SPANISH.pdf" target="_blank">Español</a></li>
+							<a href="/documents/1084364/1736606/Media+Release Robotics+-+Adult+-+SPANISH.pdf" target="_blank">Español</a></li>
 					</ul>
 				</div>
 				<div class="col-md-4 col-sm-12">
