--- a/web-content-display/education/stem-programs/code-at-tacc/cybersecurity-comptia.html
+++ b/web-content-display/education/stem-programs/code-at-tacc/cybersecurity-comptia.html
@@ -308,14 +308,8 @@ body {
 				<div class="col-md-4 col-sm-12" style="text-align:center;">
 					<h4 class="camp-subhead" style="margin:10px 10px 30px 10px; padding:0px;">
 						PROGRAM FORMS</h4>
-					<!--
-							Expected Content:
-							- Code of Conduct – English and Spanish
-							- Media Release – English and Spanish
-							- Release and Indemnification – English and Spanish
-						-->
 					<p>
-						<em>Release &amp; Indemnification Agreement:</em></p>
+						<em>Release and Indemnification Form:</em></p>
 					<p>
 						<a href=" https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=6aa21f10-26a2-4ccc-bb3c-0bb9ba4665f4&amp;env=na1&amp;acct=d40a37d5-d708-44dd-9ea7-aab378b81326&amp;v=2" target="_blank">Minors Required Documents</a><br />
 						(17 years old and under)</p>
