Quick: Save new test timeline (image swap)

--- a/web-content-display/about/test-timeline.html
+++ b/web-content-display/about/test-timeline.html
@@ -964,7 +964,7 @@ p.ptimeline{
 					</div>
 					<div class="col-sm-6">
 					  <div class="bgimage">
-						<img class="img-responsive" src="https://www.tacc.utexas.edu/documents/1084364/1620941/2021-20-years.png" width="100%" /></div>
+						<img class="img-responsive" src="https://www.tacc.utexas.edu/documents/1084364/1620941/2021-20-years.jpg" width="100%" /></div>
 						<p class="overlay-text">
 							<span style="font-size:14px; font-weight:bold;"> 20 years of powering discoveries</span><br />
 							<span style="color:#000; font-size:5px;">.</span><br />
