Quick: Save new timeline (delete old)

--- a/web-content-display/about/timeline.html
+++ b/web-content-display/about/timeline.html
@@ -946,6 +946,34 @@ p.ptimeline{
 					</div>
 				</div>
 				<!--closing 2020--></div>
+			<div id="year2021">
+				<center>
+					<h1 class="h1timeline" id="2021">
+						2021<a href="#2021">&nbsp;</a></h1>
+				</center>
+				<div class="row">
+					<div class="col-sm-6">
+						<div class="bgimage">
+							<img class="img-responsive" src="https://www.tacc.utexas.edu/documents/1084364/1620941/2021-science-cover.png" width="100%" /></div>
+						<p class="overlay-text">
+							<span style="font-size:14px; font-weight:bold;">TACC visualization on Science cover</span><br />
+							<span style="color:#000; font-size:5px;">.</span><br />
+							Researchers create a desalination membrane crucial for maximizing reverse-osmosis and water filtration.</p>
+						<p>&nbsp;
+							</p>
+					</div>
+					<div class="col-sm-6">
+					  <div class="bgimage">
+						<img class="img-responsive" src="https://www.tacc.utexas.edu/documents/1084364/1620941/2021-20-years.jpg" width="100%" /></div>
+						<p class="overlay-text">
+							<span style="font-size:14px; font-weight:bold;"> 20 years of powering discoveries</span><br />
+							<span style="color:#000; font-size:5px;">.</span><br />
+							TACC celebrates mission of providing researchers with computing resources and expertise to advance science and society.</p>
+						<p>&nbsp;
+							</p>
+					</div>
+				</div>
+				<!--closing 2021--></div>
 
 			<!-- closing timeline-wrapper --></div>
 		<!-- closing timeline-container --></div>
