RT-19638: Update EPIC cert and cip pages

--- a/web-content-display/education/EPIC/WeTeach_CS/certification.html
+++ b/web-content-display/education/EPIC/WeTeach_CS/certification.html
@@ -166,7 +166,14 @@ Style guide: components.weteachcs.cta
 		Earn a $1000 Stipend!</h4>
 	<p>
 		WeTeach_CS manages the Certification Incentive Program (CIP) that provides a $1000 stipend for Texas teachers who pass the CS 8-12 Test and obtain TEA CS certification. Hopefully, the stipend will help motivate you in your studies, and it will be a nice reward for your hard work! Instructions for applying for the stipend including eligibility, deadlines, and requirements are located lower on this page. Applications for the incentive program are due before testing.</p>
-	<a class="weteachcs-cta" href="https://docs.google.com/forms/d/e/1FAIpQLSdBWFxoo61Q3-4DMHNL-Ua_fWSNlVEOz8AvaetybJpXJBZtHg/viewform" target="_blank">Apply for $1,000 Stipend Here</a>
+	<p><span class="weteachcs-cta">Apply for the $1,000 Stipend at:</span> <a href="https://utakeit.tacc.utexas.edu/cip/" target="_blank">https://utakeit.tacc.utexas.edu/cip/</a></p>
+	<h5>
+		Application Steps</h5>
+	<ol>
+		<li>You will be required to <a href="https://idmanager.its.utexas.edu/eid_self_help/" target="_blank" title="UT EID Self-Service Tools">Create a <abbr title="University of Texas Electronic Identity">UT EID</abbr></a> (if you do not have one), or Login with your UT EID.</li>
+		<li>You will be prompted to complete your profile in UTakeIt.</li>
+		<li>You will then be able to Start the Application.</li>
+	</ol>
 	<h4>
 		Learn About CS Certification</h4>
 	<p>
@@ -196,7 +203,7 @@ Style guide: components.weteachcs.cta
 	<h4>
 		Prepare</h4>
 	<p>
-		If you have a standard or lifetime TEA teaching certificate and a bachelor's degree, you can earn a CS certification via the TEA's <a href="http://tea.texas.gov/interiorpage.aspx?id=25769812518" target="_blank">Certification By Exam</a> option, which involves passing the CS 8-12 Test. This path requires that you learn the CS content and related pedagogy on your own before taking the test. Test preparation is a significant amount of work. For most teachers, this effort will include one or two years of learning, practice and professional development. Note that if you don't have experience using computer applications, networks, and the Internet, we recommended that you pursue these types of experiences before taking on CS certification.</p>
+		If you have a standard or lifetime TEA teaching certificate and a bachelor's degree, you can earn a CS certification via the TEA's <a href="http://tea.texas.gov/interiorpage.aspx?id=25769812518" target="_blank">Certification By Exam</a> option, which involves passing the CS 8-12 Test. This path requires that you learn the CS content and related pedagogy on your own before taking the test. Test preparation is a significant amount of work. For most teachers, this effort will include one or two years of learning, practice and professional development. Note that if you don't have experience using computer applications, networks, and the Internet, we recommend that you pursue these types of experiences before taking on CS certification.</p>
 	<p>
 		There are many paths to prepare for the test. For example, if you have significant programming experience, you might be able to pass the test without preparing. Also, there are multiple content providers (Code.org, Code Academy, etc.) and languages (Java, Javascript, and Python) that you could choose, based on your preference. If you are looking for direction in this area, we outline one path that will prepare you for the test. Choose the button below to view and print a detailed checklist.</p>
 	<ul>
