--- a/web-content-display/education/EPIC/WeTeach_CS/certification/cip-checklist.html
+++ b/web-content-display/education/EPIC/WeTeach_CS/certification/cip-checklist.html
@@ -1,3 +1,9 @@
+<style id="style--abbr-title" type="text/css">
+/* TODO: Add this to global CSS */
+	/* FAQ: The global CSS styles this with a border bottom,
+			but neglects to remove browsers' dotted underline style
+			(has style: Firefox, Chrome…; no style: Safari…) */
+			abbr[title] { text-decoration: none; }</style>
 <style id="style--weteachcs-content" type="text/css">
 /* TODO: Use this scope instead of `style` tags */
 /* WARNING: Duplicated in other pages */
@@ -44,6 +50,28 @@ Style guide: components.weteachcs
 	font-weight: normal;
 	font-size: 100%;
 }</style>
+<style id="style--weteachcs-cta" type="text/css">
+/* TODO: Use this component instead of `style` tags */
+/* WARNING: Duplicated in other pages */
+/*
+WeTeach CS - Call to Action (CTA)
+
+A callout to suggest the user perform some action.
+
+Markup:
+<section>
+	<p>Description of a great opportunity</p>
+	<a class="weteachcs-cta"  data-cke-saved-href="…" href="…" target="_blank">Apply for this oppportunity!</a>
+</section>
+
+Style guide: components.weteachcs.cta
+*/
+.weteachcs-cta {
+	display: inline-block;
+	font-size: 16px;
+	font-weight: bold;
+	font-variant: small-caps;
+}</style>
 <section class="weteachcs-content">
 	<h3>
 		Certification Incentive Program (CIP) Checklist</h3>
@@ -63,7 +91,7 @@ Style guide: components.weteachcs
 		<li>
 			Not already be certified in Computer Science or Computer Information Systems (any level).</li>
 		<li>
-			Be currently certified to teach in Texas and the teacher of record in a public or charter school classroom or enrolled in an approved teacher certification program for Texas.</li>
+			Be currently certified to teach in Texas and the teacher of record in a <strong class="weteachcs-cta">public</strong> or <strong class="weteachcs-cta">charter</strong> school classroom or enrolled in an approved teacher certification program for Texas.</li>
 	</ul>
 	<h4>
 		STEP 2: Decide on When to Take the Test</h4>
@@ -83,10 +111,18 @@ Style guide: components.weteachcs
 		STEP 4: Complete CIP Application Form</h4>
 	<p>
 		Complete the <strong><a href="https://docs.google.com/forms/d/e/1FAIpQLSdBWFxoo61Q3-4DMHNL-Ua_fWSNlVEOz8AvaetybJpXJBZtHg/viewform" target="_blank">CIP Application Form online</a></strong>. Note that this form will ask you to specify your current teaching status and your Testing Window.</p>
+	<p><span class="weteachcs-cta">Apply for the $1,000 Stipend at:</span> <a href="https://utakeit.tacc.utexas.edu/cip/" target="_blank">https://utakeit.tacc.utexas.edu/cip/</a></p>
+	<h5>
+		Application Steps</h5>
+	<ol>
+		<li>You will be required to <a href="https://idmanager.its.utexas.edu/eid_self_help/" target="_blank" title="UT EID Self-Service Tools">Create a <abbr title="University of Texas Electronic Identity">UT EID</abbr></a> (if you do not have one), or Login with your UT EID.</li>
+		<li>You will be prompted to complete your profile in UTakeIt.</li>
+		<li>You will then be able to Start the Application.</li>
+	</ol>
 	<h4>
 		STEP 5: Deliver CIP Documentation</h4>
 	<p>
-		The documentation required for the CIP application follows. Please note we will not accept electronic signatures for this documentation. Collect PDFs or printouts of:</p>
+		The documentation required for the CIP application follows. Please note we will not accept electronic signatures for this documentation. Collect PDFs of:</p>
 	<ul>
 		<li>
 			TEA Certification Information</li>
@@ -100,8 +136,6 @@ Style guide: components.weteachcs
 	<ul>
 		<li>
 			<b>PDFs:</b> Rename each PDF so that the filename includes your name. Create an email and attach the documents listed above. Send the email to <a href="mailto:CIP.x0zuckfks9gtkyft@u.box.com">CIP.x0zuckfks9gtkyft@u.box.com</a>. This email will send the documents to UT Box, a secure system that protects your personal information. There is no need to include text in the email since the system only accepts attachments.</li>
-		<li>
-			<b>Printouts:</b> If you prefer to work with printouts, you can send using mail or FedEx. Please keep a copy of the documentation. We are not responsible for forms lost or delayed in transit. Please see the Alternate delivery method for CIP documentation section at the bottom of this page.</li>
 	</ul>
 	<p>
 		You will be notified by email upon acceptance to the program. If your decision to take the test is contingent on being accepted by the CIP Program, we suggest you wait to hear back from us before you register for the CS 8-12 Test.</p>
@@ -151,7 +185,7 @@ Style guide: components.weteachcs
 		<li>
 			After we receive your CS Certificate, you will be sent an electronic PIF to fill out which will require for you to attach your DL/Government ID.</li>
 		<li>
-			Once the stipend is processed, you will receive a check within 2-3 weeks.</li>
+			Once the stipend is processed, you will receive a check within 4-6 weeks.</li>
 	</ul>
 	<p>
 		Available course dates and registration info can be found on the <a href="https://utakeit.tacc.utexas.edu/events/">UTakeIT In-Person courses page</a>.</p>
@@ -159,13 +193,4 @@ Style guide: components.weteachcs
 		Finding a CS Teaching Job</h4>
 	<p>
 		To begin looking for a CS teaching job, enter your resume on the CSTA Job Board. This will help get you connected with a school looking for a CS teacher.</p>
-	<p>
-		<b>Alternate delivery method for CIP documentation:</b></p>
-	<address>
-		The University of Texas at Austin<br />
-		ATTN: Nathalie Beausoleil<br />
-		Texas Advanced Computing Center<br />
-		Advanced Computing Building (ACB #205)<br />
-		10100 Burnet Road, MC R8700<br />
-		Austin, Texas 78758-4497</address>
 </section>
