--- a/web-content-display/about/directory--full-time.html
+++ b/web-content-display/about/directory--full-time.html
@@ -1074,6 +1074,13 @@
 				<a href="mailto:krankin@tacc.utexas.edu">krankin@tacc.utexas.edu</a></td>
 			<td>
 				Expanding Pathways in Computing (EPIC)</td>
+		</tr>		<tr>
+			<td>
+				<a href="/web/website/about/directory/geoffrey-reid">Reid, Geoffrey</a></td>
+			<td>
+				<a href="mailto:greid@tacc.utexas.edu">greid@tacc.utexas.edu</a></td>
+			<td>
+				Education &amp; Outreach</td>
 		</tr>
 		<tr>
 			<td>
