Quick: Code@TACC: Save CMS Witespace Change

--- a/web-content-display/education/stem-programs/code-at-tacc/robotics.html
+++ b/web-content-display/education/stem-programs/code-at-tacc/robotics.html
@@ -3,16 +3,14 @@
 		<div class="col-sm-12">
 			<p>
 				<img alt="Code@TACC Summer High School STEM Camp Logo" class="img-responsive code-at-tacc-logo code-main-logo" src="https://www.tacc.utexas.edu/documents/1084364/1158641/Code-Wearables-1074px.png" /></p>
-			<!-- <img alt="Code@TACC Summer High School STEM Camp Logo" class="img-responsive code-main-logo" src="https://www.tacc.utexas.edu/documents/1084364/1151567/gencyber-logo-small.png" />-->
-		</div>
+			<!-- <img alt="Code@TACC Summer High School STEM Camp Logo" class="img-responsive code-main-logo" src="https://www.tacc.utexas.edu/documents/1084364/1151567/gencyber-logo-small.png" />--></div>
 		<div class="col-sm-12">
 			<header>
 				<div class="camp-name">
 					Robotics</div>
 			</header>
 		</div>
-		<!-- <h1 style="text-align: center;">Code@TACCATX</h1> --><!-- <a style="text-align: center;"><img class="img-responsive" src="https://www.tacc.utexas.edu/documents/1084364/1151567/Code@TACC-logo-small.png" style="margin:0px; padding:0px; width: 300px;" /></a> -->
-		<!-- <div class="col-sm-12">
+		<!-- <h1 style="text-align: center;">Code@TACCATX</h1> --><!-- <a style="text-align: center;"><img class="img-responsive" src="https://www.tacc.utexas.edu/documents/1084364/1151567/Code@TACC-logo-small.png" style="margin:0px; padding:0px; width: 300px;" /></a> --><!-- <div class="col-sm-12">
 			<p>
 				<img alt="DesignSafe-CI Camp logo" class="img-responsive code-logo-ds" src="https://www.tacc.utexas.edu/documents/1084364/1158641/DSCamp-logo-centered.png" /></p>
 		</div> -->
@@ -39,21 +37,18 @@
 			<p>
 				All current 9th and 10th grade (rising 10th and 11th grade) high school students are welcome to apply. We encourage the participation of students traditionally underrepresented in STEM. Selected students will receive a self-driving robotic vehicle that they can design and program to drive at home.</p>
 			<p>
-				Students are expected to participate in Code@TACC Monday - Friday until the conclusion of the program. All students will be invited to participate in quarterly Back@TACC <abbr title="Science, Technology, Engineering, and Mathematics">STEM</abbr> workshops upon completion of the program.</p></div>
+				Students are expected to participate in Code@TACC Monday - Friday until the conclusion of the program. All students will be invited to participate in quarterly Back@TACC <abbr title="Science, Technology, Engineering, and Mathematics">STEM</abbr> workshops upon completion of the program.</p>
+		</div>
 	</div>
 	<!-- Short Info about camp -->
 	<div class="row  data-banner">
 		<div class="col-md-4  data-banner__column">
 			<h2>
-				<span class="data-banner__title">Dates</span>
-				<span class="data-banner__title-content">June 7 – June 18, 2021</span>
-			</h2>
+				<span class="data-banner__title">Dates</span> <span class="data-banner__title-content">June 7 – June 18, 2021</span></h2>
 		</div>
 		<div class="col-md-4  data-banner__column data-banner__center-column">
 			<h2>
-				<span class="data-banner__title">Application</span>
-				<a class="data-banner__title-content" href="https://utexas.qualtrics.com/jfe/form/SV_3ZUZzYPgkW6suOx" target="_blank">Apply Here</a>
-			</h2>
+				<span class="data-banner__title">Application</span> <a class="data-banner__title-content" href="https://utexas.qualtrics.com/jfe/form/SV_3ZUZzYPgkW6suOx" target="_blank">Apply Here</a></h2>
 			<p class="data-banner__content  small">
 				Application closes April 26, 2021<!--<br />
 				We will update be notified of acceptance on May 8, 2020--></p>
@@ -66,9 +61,7 @@
 		</div>
 		<div class="col-md-4  data-banner__column">
 			<h2>
-				<span class="data-banner__title">Cost</span>
-				<span class="data-banner__title-content">FREE</span>
-			</h2>
+				<span class="data-banner__title">Cost</span> <span class="data-banner__title-content">FREE</span></h2>
 		</div>
 	</div>
 	<!-- Prospective Activities -->
@@ -137,7 +130,7 @@
 						<li>
 							<a href="https://idmanager.its.utexas.edu/eid_self_help/" target="_blank" title="UT E-ID Self-Service Tools">Get a <abbr title="University of Texas Electronic Identity">UT E-ID</abbr></a></li>
 						<li>
-							<a href="https://youtu.be/EePa27mGuGE" target="_blank" title="Creating a UT EID (YouTube video instructions)">Video instructions to “Get” a <abbr title="University of Texas Electronic Identity">UT E-ID</abbr></a></li>
+							<a href="https://youtu.be/EePa27mGuGE" target="_blank" title="Creating a UT EID (YouTube video instructions)">Video instructions to "Get" a <abbr title="University of Texas Electronic Identity">UT E-ID</abbr></a></li>
 					</ul>
 				</div>
 				<!--<div class="col-md-4 col-sm-12">
@@ -163,9 +156,9 @@
 						<em>Code of Conduct:</em></p>
 					<ul class="info-list">
 						<li>
-							<a href="/documents/1084364/1736606/Code%40TACC+Code+of+Conduct.pdf" title="2021 Code@TACC Code of Conduct - ENGLISH" target="_blank">English</a></li>
+							<a href="/documents/1084364/1736606/Code%40TACC+Code+of+Conduct.pdf" target="_blank" title="2021 Code@TACC Code of Conduct - ENGLISH">English</a></li>
 						<li>
-							<a href="/documents/1084364/1736606/Code%40TACC+Code+of+Conduct+-+SPANISH.pdf" title="2021 Code@TACC Code of Conduct - SPANISH" target="_blank">Español</a></li>
+							<a href="/documents/1084364/1736606/Code%40TACC+Code+of+Conduct+-+SPANISH.pdf" target="_blank" title="2021 Code@TACC Code of Conduct - SPANISH">Español</a></li>
 					</ul>
 					<!--<p>
 						<em>Compliance Forms:</em></p>
@@ -199,9 +192,9 @@
 						<em>Y.P.P. Communication Plan:</em></p>
 					<ul class="info-list">
 						<li>
-							<a href="/documents/1084364/1736606/Comm+Plan+Robotics.pdf" title="Code@TACC Robotics Communication Plan - ENGLISH" target="_blank">English</a></li>
+							<a href="/documents/1084364/1736606/Comm+Plan+Robotics.pdf" target="_blank" title="Code@TACC Robotics Communication Plan - ENGLISH">English</a></li>
 						<li>
-							<a href="/documents/1084364/1736606/Comm+Plan+Robotics+-+SPANISH.pdf" title="Code@TACC Robotics Communication Plan - SPANISH" target="_blank">Español</a></li>
+							<a href="/documents/1084364/1736606/Comm+Plan+Robotics+-+SPANISH.pdf" target="_blank" title="Code@TACC Robotics Communication Plan - SPANISH">Español</a></li>
 					</ul>
 				</div>
 			</div>
@@ -276,7 +269,7 @@
 					</div>
 					<div aria-labelledby="supervision" class="panel-collapse collapse" id="supervision-answer" role="tabpanel">
 						<div class="panel-body">
-							<b>A:</b> Students will be supervised on the calls by college counselors.  Counselors have been background checked (also checked through the national sex offender registry) and have received child protection training</div>
+							<b>A:</b> Students will be supervised on the calls by college counselors. Counselors have been background checked (also checked through the national sex offender registry) and have received child protection training</div>
 					</div>
 				</div>
 				<!--<div class="panel panel-default">
@@ -288,9 +281,7 @@
 						<div class="panel-body">
 							<b>A:</b> Students will not need to bring laptops from home for this program.</div>
 					</div>
-				</div>-->
-				<!-- HOUSING -->
-				<!--<div class="panel panel-default">
+				</div>--><!-- HOUSING --><!--<div class="panel panel-default">
 					<div class="panel-heading" id="housing" role="tab">
 						<h4 class="panel-title">
 							<a aria-controls="housing-answer" aria-expanded="true" class="collapsed" data-parent="#housing" data-toggle="collapse" href="#housing-answer" role="button"> <b>Q</b>: Where will the students be staying during the course of the program? </a></h4>
@@ -339,9 +330,7 @@
 						<div class="panel-body">
 							<b>A:</b> Whitis Court Residential Hall requires key-card access to enter each building. Exits are alarmed and connected to University Police Department. Also, at least two counselors are assigned to sleep in each residential building.</div>
 					</div>
-				</div>-->
-				<!-- MEDICAL -->
-				<!--<div class="panel panel-default">
+				</div>--><!-- MEDICAL --><!--<div class="panel panel-default">
 					<div class="panel-heading" id="allergies" role="tab">
 						<h4 class="panel-title">
 							<a aria-controls="allergies-answer" aria-expanded="true" class="collapsed" data-parent="#allergies" data-toggle="collapse" href="#allergies-answer" role="button"> <b>Q</b>: What if I have food allergies or special dietary needs? </a></h4>
@@ -360,9 +349,7 @@
 						<div class="panel-body">
 							<b>A:</b> For emergency treatment, students will be transported to St. David's North Austin Medical Center (12221 N. Mopac) when on JJ Pickle campus or UT Austin University Health Services -our on-campus health service for minor treatment (512-471-4955), Monday through Friday 8a – 5pm. For emergency or after hours treatment, students will be transported to St. David's Hospital on east 32nd street in Austin.</div>
 					</div>
-				</div>-->
-				<!-- CLOTHING -->
-				<!--<div class="panel panel-default">
+				</div>--><!-- CLOTHING --><!--<div class="panel panel-default">
 					<div class="panel-heading" id="clothes" role="tab">
 						<h4 class="panel-title">
 							<a aria-controls="washing-clothes" aria-expanded="true" class="collapsed" data-parent="#clothes" data-toggle="collapse" href="#washing-clothes" role="button"> <b>Q</b>: Will students be able to wash clothes? </a></h4>
@@ -391,9 +378,7 @@
 						<div class="panel-body">
 							<b>A:</b> During the week, students should bring comfortable and appropriate clothing for 90F during the day and 70F during the night weather. Also, participants should bring socks for bowling and walking shoes. Note, all casual-wear clothing must conform to school dress code standards.</div>
 					</div>
-				</div>-->
-				<!-- PARTICIPATION -->
-				<!--<div class="panel panel-default">
+				</div>--><!-- PARTICIPATION --><!--<div class="panel panel-default">
 					<div class="panel-heading" id="dismissal" role="tab">
 						<h4 class="panel-title">
 							<a aria-controls="dismissal-answer" aria-expanded="true" class="collapsed" data-parent="#dismissal" data-toggle="collapse" href="#dismissal-answer" role="button"> <b>Q</b>: May students leave campus? </a></h4>
@@ -422,8 +407,7 @@
 						<div class="panel-body">
 							<b>A:</b> Participants will be unable to have visitors. Adults with access to our campers require background checks (also checked through the national sex offender registry) and training on protecting children from abuse. Adults (including counselors) are never allowed to be alone with a camper.</div>
 					</div>
-				</div>-->
-				<!-- 2021 ADDITIONS -->
+				</div>--><!-- 2021 ADDITIONS -->
 				<div class="panel panel-default">
 					<div class="panel-heading" id="wifi" role="tab">
 						<h4 class="panel-title">
@@ -464,7 +448,7 @@
 			<h2 class="camp-subhead">
 				TACC Dress Policy</h2>
 			<p>
-				Participants have the right to dress as they choose as long as their dress meets the approved dress and grooming regulations, does not disrupt activities, is not obscene or defamatory, and does not endanger the physical health or safety of themselves or others.
+				Participants have the right to dress as they choose as long as their dress meets the approved dress and grooming regulations, does not disrupt activities, is not obscene or defamatory, and does not endanger the physical health or safety of themselves or others.</p>
 			<p>
 				Participants have the responsibility to dress and groom in such a manner so as to reflect cleanliness, modesty, safety and good taste; become familiar with and adhere to approved dress and grooming expectations of the Texas Advanced Computing Center (TACC).</p>
 			<p>
@@ -473,7 +457,7 @@
 				<li>
 					Any clothing that reveals undergarments including boxer shorts.</li>
 				<li>
-					Skirts/Shorts that are not within 1 inch of the student’s fingertips when their arms are extended by their side.</li>
+					Skirts/Shorts that are not within 1 inch of the student's fingertips when their arms are extended by their side.</li>
 				<li>
 					Any clothing that reveals a student's stomach, torso, chest, breasts or cleavage.</li>
 				<li>
