--- a/web-content-display/education/stem-programs/code-at-tacc/cybersecurity.html
+++ b/web-content-display/education/stem-programs/code-at-tacc/cybersecurity.html
@@ -165,9 +165,9 @@
 						<em>Code of Conduct:</em></p>
 					<ul class="info-list">
 						<li>
-							<a href="/documents/1084364/1736606/Code%40TACC+Code+of+Conduct.pdf" title="2021 Code@TACC Code of Conduct - ENGLISH" target="_blank">English</a></li>
+							<a href="/documents/1084364/1736606/Code%40TACC+Code+of+Conduct.pdf" target="_blank" title="2021 Code@TACC Code of Conduct - ENGLISH">English</a></li>
 						<li>
-							<a href="/documents/1084364/1736606/Code%40TACC+Code+of+Conduct+-+SPANISH.pdf" title="2021 Code@TACC Code of Conduct - SPANISH" target="_blank">Español</a></li>
+							<a href="/documents/1084364/1736606/Code%40TACC+Code+of+Conduct+-+SPANISH.pdf" target="_blank" title="2021 Code@TACC Code of Conduct - SPANISH">Español</a></li>
 					</ul>
 					<!--<p>
 						<em>Compliance Forms:</em></p>
@@ -182,9 +182,9 @@
 						<em>Release and Indemnification Form:</em></p>
 					<ul class="info-list">
 						<li>
-							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=d587675e-b44e-4223-af5d-9ca523cf5168&env=na1&acct=d40a37d5-d708-44dd-9ea7-aab378b81326&v=2" target="_blank">English</a></li>
+							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=d587675e-b44e-4223-af5d-9ca523cf5168&amp;env=na1&amp;acct=d40a37d5-d708-44dd-9ea7-aab378b81326&amp;v=2" target="_blank">English</a></li>
 						<li>
-							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=d438f709-6ea0-4a45-89bc-138daf40ad00&env=na1&acct=d40a37d5-d708-44dd-9ea7-aab378b81326&v=2" target="_blank">Español</a></li>
+							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=d438f709-6ea0-4a45-89bc-138daf40ad00&amp;env=na1&amp;acct=d40a37d5-d708-44dd-9ea7-aab378b81326&amp;v=2" target="_blank">Español</a></li>
 					</ul>
 					<p>
 						<em>Media Release:</em></p>
@@ -206,9 +206,9 @@
 						<em>Y.P.P. Communication Plan:</em></p>
 					<ul class="info-list">
 						<li>
-							<a href="/documents/1084364/1736606/Comm+Plan+GenCyber.pdf" title="Code@TACC Robotics Communication Plan - ENGLISH" target="_blank">English</a></li>
+							<a href="/documents/1084364/1736606/Comm+Plan+GenCyber.pdf" target="_blank" title="Code@TACC Robotics Communication Plan - ENGLISH">English</a></li>
 						<li>
-							<a href="/documents/1084364/1736606/Comm+Plan+GenCyber+-+SPANISH.pdf" title="Code@TACC Robotics Communication Plan - SPANISH" target="_blank">Español</a></li>
+							<a href="/documents/1084364/1736606/Comm+Plan+GenCyber+-+SPANISH.pdf" target="_blank" title="Code@TACC Robotics Communication Plan - SPANISH">Español</a></li>
 					</ul>
 				</div>
 			</div>
@@ -562,8 +562,7 @@
 					<li>
 						<img alt="CISCO Logo" src="/documents/1084364/1822769/cisco-logo-blue-2016.png" /></li>
 				</ul>
-				<p class="small">These are all contributors to our goals, and shall get the same general dimensions for space on the site, but none are highlighted more than others.</p>-->
-		</div>
+				<p class="small">These are all contributors to our goals, and shall get the same general dimensions for space on the site, but none are highlighted more than others.</p>--></div>
 		<!--<div class="row">
 			<div style="margin:50px 0px;padding: 0px;">
 					<h2 style="text-align: center;">
@@ -576,6 +575,5 @@
 			<div class="col-sm-6">
 				<a aria-label="The formal Code@TACC website." href="https://www.gen-cyber.com" target="_blank"><img alt="Code@TACC" class="img-responsive img-banners" src="https://www.tacc.utexas.edu/documents/1084364/1158641/DS-Banner.jpg" /></a>
 					</div>
-		</div>-->
-	</div>
+		</div>--></div>
 </div>
