RT-19654: Close applications for Code@TACC

--- a/web-content-display/education/stem-programs/code-at-tacc/robotics.html
+++ b/web-content-display/education/stem-programs/code-at-tacc/robotics.html
@@ -48,16 +48,26 @@
 		</div>
 		<div class="col-md-4  data-banner__column data-banner__center-column">
 			<h2>
-				<span class="data-banner__title">Application</span> <a class="data-banner__title-content" href="https://utexas.qualtrics.com/jfe/form/SV_3ZUZzYPgkW6suOx" target="_blank">Apply Here</a></h2>
+				<span class="data-banner__title">Application</span>
+				<!--<a class="data-banner__title-content" href="https://utexas.qualtrics.com/jfe/form/SV_3ZUZzYPgkW6suOx" target="_blank">Apply Here</a>
+				-->
+			</h2>
+			<!-- OPEN: Close on Date. Notify by Date --><!--
 			<p class="data-banner__content  small">
-				Application closes April 26, 2021<!--<br />
-				We will update be notified of acceptance on May 8, 2020--></p>
-			<!--2020-04-21: Camps closed --><!--
+				Application closes April 26, 2021<br />
+				We will update be notified of acceptance on May 8, 2020</p>
+			-->
+			<!-- OPEN: Close on Date --><!--
+			<p class="data-banner__content  small">
+				Application closes April 26, 2021</p>
+			-->
+			<!-- CLOSED: Notify by Date --><!--
 			<p class="data-banner__content  small">
 				Participants will be notified by May 15, if they were selected to participate in the program.</p>
 			-->
+			<!-- CLOSED: Simple -->
 			<p class="data-banner__content  small">
-				Out of concern for the health and safety of our community, all TACC summer programs including Code@TACC, will be hosted virtually in 2021.</p>
+				Applications closed.</p>
 		</div>
 		<div class="col-md-4  data-banner__column">
 			<h2>
