--- a/web-content-display/education/stem-programs/code-at-tacc/cybersecurity.html
+++ b/web-content-display/education/stem-programs/code-at-tacc/cybersecurity.html
@@ -51,17 +51,22 @@
 		</div>
 		<div class="col-md-4  data-banner__column data-banner__center-column">
 			<h2>
-				<span class="data-banner__title">Application</span> <a class="data-banner__title-content" href="https://utexas.qualtrics.com/jfe/form/SV_aVhIgJLYLwSo5Hn" target="_blank">Apply Here</a></h2>
-			<!--2020-04-21: Camps closed --><!--
+				<span class="data-banner__title">Application</span>
+				<!--<a class="data-banner__title-content" href="https://utexas.qualtrics.com/jfe/form/SV_aVhIgJLYLwSo5Hn" target="_blank">Apply Here</a>-->
+			</h2>
+			<!-- OPEN: Close on Date. Notify by Date --><!--
 			<p class="data-banner__content  small">
 				Application closes April 26, 2021<br />
-				We will update be notified of acceptance on May 8, 2020</p>--><!--2020-04-21: Camps closed --><!--
+				We will update be notified of acceptance on May 8, 2020</p>
+			-->
+			<!-- CLOSED: Notify by Date --><!--
 			<p class="data-banner__content  small">
 				Participants will be notified by May 15, if they were selected to participate in the program.</p>
-			--><!--2020-04-21: Camps closed --><!--
+			-->
+			<!-- CLOSED: Simple -->
 			<p class="data-banner__content  small">
-				Participants will be notified by May 1, if they were selected to participate in the program. Application closes on April 20, 2020.</p>
-			--></div>
+				Applications closed.</p>
+		</div>
 		<div class="col-md-4  data-banner__column">
 			<h2>
 				<span class="data-banner__title">Cost</span> <span class="data-banner__title-content">FREE</span></h2>
