Quick: Fix group name for consistency on staff dir

--- a/web-content-display/about/directory--full-time.html
+++ b/web-content-display/about/directory--full-time.html
@@ -409,7 +409,7 @@
 			<td>
 				<a href="mailto:aferrier@tacc.utexas.edu">aferrier@tacc.utexas.edu</a></td>
 			<td>
-				Networking, Security, Operations</td>
+				Networking, Security &amp; Operations</td>
 		</tr>
 		<tr>
 			<td>
@@ -1124,6 +1124,14 @@
 		</tr>
 		<tr>
 			<td>
+				<a href="/web/website/about/directory/will-ruzicka">Ruzicka, Will</a></td>
+			<td>
+				<a href="mailto:wruzicka@tacc.utexas.edu">wruzicka@tacc.utexas.edu</a></td>
+			<td>
+				Networking, Security &amp; Operations</td>
+		</tr>
+		<tr>
+			<td>
 				<a href="/web/website/about/directory/jorge-salazar" t3url="275">Salazar, Jorge</a></td>
 			<td>
 				<a href="mailto:jorge@tacc.utexas.edu ">jorge@tacc.utexas.edu </a></td>
@@ -1400,7 +1408,7 @@
 			<td>
 				<a href="mailto:kweese@tacc.utexas.edu">kweese@tacc.utexas.edu</a></td>
 			<td>
-				Networking, Security, Operations</td>
+				Networking, Security &amp; Operations</td>
 		</tr>
 		<tr>
 			<td>
