--- a/web-content-display/about/jobs.html
+++ b/web-content-display/about/jobs.html
@@ -34,14 +34,14 @@
 	<div class="panel panel-default">
 		<div class="panel-heading" id="data" role="tab">
 			<h4 class="panel-title">
-				<a aria-controls="engineering-scientist-associate" aria-expanded="true" class="collapsed" data-parent="data" data-toggle="collapse" href="#engineering-scientist-associate" role="button">Engineering Scientist Associate</a></h4>
+				<a aria-controls="research-associate-hpc" aria-expanded="true" class="collapsed" data-parent="data" data-toggle="collapse" href="#research-associate-hpc" role="button">Research Associate (HPC)</a></h4>
 		</div>
-		<div aria-labelledby="data" class="panel-collapse collapse" id="engineering-scientist-associate" role="tabpanel">
+		<div aria-labelledby="data" class="panel-collapse collapse" id="research-associate-hpc" role="tabpanel">
 			<div class="panel-body">
-				<p>Position will work on software development tasks including front-, middle- and back-end tiers.</p>
+				<p>This position will work with TACC/DesignSafe users to integrate HPC technologies into their research and development activities and to measure the impact of TACC's HPC systems on their research capabilities.</p>
 
 				<p>
-					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Engineering-Scientist-Associate_R_00011186" target="_blank" title="Apply Now">Apply Now</a></strong></p>
+					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Research-Associate_R_00013319" target="_blank" title="Apply Now">Apply Now</a></strong></p>
 			</div>
 		</div>
 	</div>
@@ -50,7 +50,7 @@
 	<div class="panel panel-default">
 		<div class="panel-heading" id="data" role="tab">
 			<h4 class="panel-title">
-				<a aria-controls="research-associate-for-sci" aria-expanded="true" class="collapsed" data-parent="data" data-toggle="collapse" href="#research-associate-for-sci" role="button">Research Associate</a></h4>
+				<a aria-controls="research-associate-for-sci" aria-expanded="true" class="collapsed" data-parent="data" data-toggle="collapse" href="#research-associate-for-sci" role="button">Research Associate (SCI)</a></h4>
 		</div>
 		<div aria-labelledby="data" class="panel-collapse collapse" id="research-associate-for-sci" role="tabpanel">
 			<div class="panel-body">
@@ -58,22 +58,6 @@
 
 				<p>
 					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/en-US/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Research-Associate_R_00006550" target="_blank" title="Apply Now">Apply Now</a></strong></p>
-			</div>
-		</div>
-	</div>
-
-
-	<div class="panel panel-default">
-		<div class="panel-heading" id="data" role="tab">
-			<h4 class="panel-title">
-				<a aria-controls="jr-security-analyst" aria-expanded="true" class="collapsed" data-parent="data" data-toggle="collapse" href="#jr-security-analyst" role="button">Junior Security Analyst</a></h4>
-		</div>
-		<div aria-labelledby="data" class="panel-collapse collapse" id="jr-security-analyst" role="tabpanel">
-			<div class="panel-body">
-				<p>The Junior Security Analyst position in the Technology Infrastructure group at the Texas Advanced Computing Center (TACC) will provide network vulnerability testing, monitoring and network security compliance audits to ensure best practices are in use and network systems comply with TACC security policies.</p>
-
-				<p>
-					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Junior-Security-Analyst_R_00012150" target="_blank" title="Apply Now">Apply Now</a></strong></p>
 			</div>
 		</div>
 	</div>
