--- a/web-content-display/about/jobs.html
+++ b/web-content-display/about/jobs.html
@@ -31,17 +31,35 @@
 <!--<p><b>No open positions at this time.</b></p>-->
 <div aria-multiselectable="table" class="panel-group" id="careers" role="tablist">
 
+
+
 	<div class="panel panel-default">
 		<div class="panel-heading" id="data" role="tab">
 			<h4 class="panel-title">
-				<a aria-controls="research-associate-hpc" aria-expanded="true" class="collapsed" data-parent="data" data-toggle="collapse" href="#research-associate-hpc" role="button">Research Associate (HPC)</a></h4>
+				<a aria-controls="senior-python-developer" aria-expanded="true" class="collapsed" data-parent="data" data-toggle="collapse" href="#senior-python-developer" role="button">Senior Python Developer</a></h4>
 		</div>
-		<div aria-labelledby="data" class="panel-collapse collapse" id="research-associate-hpc" role="tabpanel">
+		<div aria-labelledby="data" class="panel-collapse collapse" id="senior-python-developer" role="tabpanel">
 			<div class="panel-body">
-				<p>This position will work with TACC/DesignSafe users to integrate HPC technologies into their research and development activities and to measure the impact of TACC's HPC systems on their research capabilities.</p>
+				<p>This position will contribute to the design, implementation and operation of cloud native applications and infrastructure supporting computational science endeavors.</p>
 
 				<p>
-					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Research-Associate_R_00013319" target="_blank" title="Apply Now">Apply Now</a></strong></p>
+					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Senior-Python-Developer_R_00013540" target="_blank" title="Apply Now">Apply Now</a></strong></p>
+			</div>
+		</div>
+	</div>
+
+
+	<div class="panel panel-default">
+		<div class="panel-heading" id="data" role="tab">
+			<h4 class="panel-title">
+				<a aria-controls="senior-devops-developer" aria-expanded="true" class="collapsed" data-parent="data" data-toggle="collapse" href="#senior-devops-developer" role="button">Senior DevOps Developer</a></h4>
+		</div>
+		<div aria-labelledby="data" class="panel-collapse collapse" id="senior-devops-developer" role="tabpanel">
+			<div class="panel-body">
+				<p>This position will design, implement and operate an on-premise, national-scale Kubernetes platform as a service for the research computing community.</p>
+
+				<p>
+					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Senior-DevOps-Engineer_R_00013541" target="_blank" title="Apply Now">Apply Now</a></strong></p>
 			</div>
 		</div>
 	</div>
@@ -58,6 +76,22 @@
 
 				<p>
 					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/en-US/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Research-Associate_R_00006550" target="_blank" title="Apply Now">Apply Now</a></strong></p>
+			</div>
+		</div>
+	</div>
+
+
+	<div class="panel panel-default">
+		<div class="panel-heading" id="data" role="tab">
+			<h4 class="panel-title">
+				<a aria-controls="research-associate-for-hpc" aria-expanded="true" class="collapsed" data-parent="data" data-toggle="collapse" href="#research-associate-for-hpc" role="button">Research Associate (HPC)</a></h4>
+		</div>
+		<div aria-labelledby="data" class="panel-collapse collapse" id="research-associate-for-hpc" role="tabpanel">
+			<div class="panel-body">
+				<p>This position will work with TACC/DesignSafe users to integrate HPC technologies into their research and development activities and to measure the impact of TACC's HPC systems on their research capabilities.</p>
+
+				<p>
+					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Research-Associate_R_00013319" target="_blank" title="Apply Now">Apply Now</a></strong></p>
 			</div>
 		</div>
 	</div>
