--- a/web-content/root/education/stem-programs/code-at-tacc/connected.html
+++ b/web-content/root/education/stem-programs/code-at-tacc/connected.html
@@ -121,28 +121,21 @@
 				<div class="col-md-4 col-sm-12">
 					<h4 class="camp-subhead">
 						PROGRAM FORMS</h4>
-					<ul class="info-list">
+					<!--<ul class="info-list">
 						<li>
 							Required forms will be available soon.</li>
-					</ul>
-					<!--<p>
-						<em>Compliance Forms:</em></p>
-					<ul class="info-list">
-						<li>
-							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=88127a7a-05a8-4641-8fea-846a07f74309&amp;env=na1" target="_blank">English</a></p>
-						<li>
-							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=2a80961b-5625-46f5-b5e1-d6ebe70acadc&amp;env=na1" target="_blank">Español</a></li>
-					</ul>
+					</ul>-->
 					<p>
-						<em>Release and Indemnification Form:</em></p>
+						<em>Code of Conduct,</em><br />
+						<em>Release and Indemnification Form</em><br />
+						<em>&amp; Media Release:</em></p>
 					<ul class="info-list">
 						<li>
-							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=88127a7a-05a8-4641-8fea-846a07f74309" target="_blank">2018 English Code@TACC Connected - YPP Camp Release Forms</a>
-						</li>
+							<a href="https://powerforms.docusign.net/7f448a69-ffbe-4dc1-ae3f-cbab0cb657ad?env=na1&acct=d40a37d5-d708-44dd-9ea7-aab378b81326&accountId=d40a37d5-d708-44dd-9ea7-aab378b81326" target="_blank" title="2021 Code@TACC Connected Forms - ENGLISH">English</a></li>
 						<li>
-							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=2a80961b-5625-46f5-b5e1-d6ebe70acadc" target="_blank">2018 Español Code@TACC Connected - YPP formularios de liberación</a>
-						</li>
-					</ul>--></div>
+							<a href="https://powerforms.docusign.net/9ff76af9-3e82-481c-9cc0-06aa08e9f3a4?env=na1&acct=d40a37d5-d708-44dd-9ea7-aab378b81326&accountId=d40a37d5-d708-44dd-9ea7-aab378b81326" target="_blank" title="2021 Code@TACC Connected Forms - SPANISH">Español</a></li>
+					</ul>
+				</div>
 				<div class="col-md-4 col-sm-12">
 					<h4 class="camp-subhead">
 						CAMP PROGRAM</h4>
