RT-19721: Reduce E&O GenCyber redundant content

--- a/web-content/root/education/stem-programs/code-at-tacc/cybersecurity.html
+++ b/web-content/root/education/stem-programs/code-at-tacc/cybersecurity.html
@@ -167,13 +167,23 @@
 							Required forms will be available soon.</li>
 					</ul>-->
 					<p>
+						<em>Code of Conduct,</em><br />
+						<em>Release and Indemnification Form</em><br />
+						<em>&amp; Media Release:</em></p>
+					<ul class="info-list">
+						<li>
+							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=d587675e-b44e-4223-af5d-9ca523cf5168&amp;env=na1&amp;acct=d40a37d5-d708-44dd-9ea7-aab378b81326&amp;v=2" target="_blank">English</a></li>
+						<li>
+							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=d438f709-6ea0-4a45-89bc-138daf40ad00&amp;env=na1&amp;acct=d40a37d5-d708-44dd-9ea7-aab378b81326&amp;v=2" target="_blank">Español</a></li>
+					</ul>
+					<!--<p>
 						<em>Code of Conduct:</em></p>
 					<ul class="info-list">
 						<li>
 							<a href="/documents/1084364/1736606/Code%40TACC+Code+of+Conduct.pdf" target="_blank" title="2021 Code@TACC Code of Conduct - ENGLISH">English</a></li>
 						<li>
 							<a href="/documents/1084364/1736606/Code%40TACC+Code+of+Conduct+-+SPANISH.pdf" target="_blank" title="2021 Code@TACC Code of Conduct - SPANISH">Español</a></li>
-					</ul>
+					</ul>-->
 					<!--<p>
 						<em>Compliance Forms:</em></p>
 					<ul class="info-list">
@@ -183,22 +193,22 @@
 							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=ae067a87-eb26-42d4-be16-344a705d148f&amp;env=na1" target="_blank">Español</a></li>
 					</ul>
 					-->
-					<p>
+					<!--<p>
 						<em>Release and Indemnification Form:</em></p>
 					<ul class="info-list">
 						<li>
 							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=d587675e-b44e-4223-af5d-9ca523cf5168&amp;env=na1&amp;acct=d40a37d5-d708-44dd-9ea7-aab378b81326&amp;v=2" target="_blank">English</a></li>
 						<li>
 							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=d438f709-6ea0-4a45-89bc-138daf40ad00&amp;env=na1&amp;acct=d40a37d5-d708-44dd-9ea7-aab378b81326&amp;v=2" target="_blank">Español</a></li>
-					</ul>
-					<p>
+					</ul>-->
+					<!--<p>
 						<em>Media Release:</em></p>
 					<ul class="info-list">
 						<li>
 							<a href="/documents/1084364/1736606/Media+Release+Robotics+-+Adult.pdf" target="_blank">English</a></li>
 						<li>
 							<a href="/documents/1084364/1736606/Media+Release+Robotics+-+Adult+-+SPANISH.pdf" target="_blank">Español</a></li>
-					</ul>
+					</ul>-->
 				</div>
 				<div class="col-md-4 col-sm-12">
 					<h4 class="camp-subhead">
